kubernetes-ansible/roles/view/templates/viewer-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/content-type-nosniff: "false"
  name: viewer-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graph-viewer-service
                port:
                  number: 80
